--- a/Tabang-Hub/Tabang-Hub/Views/Admin/OrganizationAccounts.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Admin/OrganizationAccounts.cshtml
@@ -34,7 +34,7 @@
                                 <td>@list.Org_Type</td>
                                 <td>@list.Contact_No</td>
                                 <td>
-                                    <button type="button" class="btn btn-sm btn-danger delete-button" data-org-id="@list.User_Id">Delete</button>
+                                    <button type="button" class="btn btn-sm btn-danger delete-button" data-org-id="@list.User_Id">Deactivate</button>
                                 </td>
                             </tr>
                         }
@@ -43,7 +43,7 @@
             </table>
         </div>
     </div>
-    
+
     <div class="not-active-accounts">
         <h5 class="text-start">Not Active Accounts</h5>
         <div class="table-responsive border rounded p-2">
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    </div>
+</div>
 
 <div class="modal fade" id="createAccountModal" tabindex="-1" aria-labelledby="createAccountModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -133,18 +133,76 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script>
     $(document).ready(function () {
+        // Function to preview image before upload
+        function previewImage(event, previewId) {
+            var reader = new FileReader();
+            reader.onload = function () {
+                var output = document.getElementById(previewId);
+                output.src = reader.result;
+                output.style.display = 'block';
+            };
+            reader.readAsDataURL(event.target.files[0]);
+        }
+
+        // Event listener for the preview image function
+        $('input[type="file"]').change(function (event) {
+            previewImage(event, $(this).next('img').attr('id'));
+        });
+
+        // Event listener for deactivate buttons
+        $('.delete-button').click(function (event) {
+            event.stopPropagation(); // Prevent the row click event
+            var userId = $(this).data('org-id');
+
+            // Confirmation dialog before deactivation
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You won't be able to revert this!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, deactivate it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: '@Url.Action("Deactivate")',
+                        type: 'POST',
+                        data: { userId: userId },
+                        success: function (response) {
+                            if (response.success) {
+                                Swal.fire(
+                                    'Deactivated!',
+                                    'The account has been deactivated.',
+                                    'success'
+                                ).then(() => {
+                                    // Optionally reload the page or remove the row from the table
+                                    location.reload();
+                                });
+                            } else {
+                                Swal.fire(
+                                    'Error!',
+                                    'Failed to deactivate the account: ' + response.message,
+                                    'error'
+                                );
+                            }
+                        },
+                        error: function () {
+                            Swal.fire(
+                                'Error!',
+                                'An error occurred. Please try again.',
+                                'error'
+                            );
+                        }
+                    });
+                }
+            });
+        });
+
+        // Event listener for table rows (redirect to details)
         $('.organization-row').click(function () {
             var orgId = $(this).data('org-id');
             window.location.href = '@Url.Action("OrgDetails", "Admin")' + '?orgId=' + orgId;
-        });        
-
-    function previewImage(event, previewId) {
-        var reader = new FileReader();
-        reader.onload = function(){
-            var output = document.getElementById(previewId);
-            output.src = reader.result;
-            output.style.display = 'block';
-        };
-        reader.readAsDataURL(event.target.files[0]);
-    }
+        });
+    });
 </script>
