--- a/Tabang-Hub/Tabang-Hub/Views/Page/Login.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Login.cshtml
@@ -5,11 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style>
-    .registerHere{
+    .registerHere {
         color: blue;
     }
-    .registerHere:hover{
-        text-decoration: underline;
+
+        .registerHere:hover {
+            text-decoration: underline;
+        }
+
+    .error-message {
+        color: red;
+        font-weight: bold;
+        margin-bottom: 15px;
     }
 </style>
 <div class="container mt-5">
@@ -23,7 +30,10 @@
                         </div>
                         <div class="col-md-8">
                             <h2>Login to your Account</h2>
-                            @*<p>Enter your details to login.</p>*@
+                            @if (ViewBag.Error != null)
+                            {
+                                <p class="error-message">@ViewBag.Error</p>
+                            }
                             <form action="#" method="post">
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Email Address</label>
@@ -57,4 +67,3 @@
     </div>
 </div>
 <br />
-
