--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Admin.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Admin.cshtml
@@ -38,6 +38,9 @@
                         <a class="nav-link" href="~/Admin/OrganizationAccounts">Organization Accounts</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="~/Admin/ManageSkill">Manage Skill</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Reports</a>
                     </li>
                     <li class="nav-item">
